GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.

CHANGELOG
=========
v16.0.00
--------
	Headlines
		Activated Simplified Chinese and Polish as available languages
		Added Croatian and Estonian as development languages

	Significant Changes

	Changes With Important Notices
		System: fixed Cutting Edge detect/set issue in installer, impacting Cutting Edge installs from v15-16 (which may need to be reinstalled)

	Security

	Tweaks & Bug Fixes
		System: improved IP address handling in setLog function
		System: added United Arab Emirates Dirham, Colombian Peso and Fijian Dollar as currencies
		System: adjusted notifications icon so it is clickable even when there are no notifications
		System: fixed error with deleting a record when multiple tabs are open for the same session
		System: moved Russian Ruble from PayPal to Other section in currency listing
		System: added Afaan Oromo as development language
		System: made translation credits in footer fairer
		System: simplified UI text in Parent Dashboard
        System: fixed a user photo upload issue involving usernames with a dot in them
		System: fixed issue preventing timezone string field description from being translated
		System: added timezones strings to translatable string list
		System: improved timezone selection process by using select instead of text field
		System: moved footer logo style into theme CSS
		System: restored Cutting Edge status message to installer
		Activities: added notifications when students are bumped up into an activity on self unenrolment
		Activities: added logging of student activity changes in order to track sign up history
        Activities: added Activity Choices by Roll Group for ease of looking up student's activity times
		Activities: added Media bar to Description field in add and edit screens